# notes-text-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml
mcp_server/: pyproject.toml  server.py  test_server.py
